Stopgap react fix

--- a/css/btr-settings.css
+++ b/css/btr-settings.css
@@ -1,3 +1,16 @@
+.btr-react-warning {
+	display: none;
+}
+
+.btr-react-nav .btr-react-warning {
+	display: block;
+	font-weight: 900;
+	color: red;
+	font-size: 16px;
+	padding-bottom: 10px;
+}
+
+
 .btr-settings-modal {
 	position: fixed;
 	display: flex;
